Add healthz check endpoint
